# 3dr

./: .gp3.cpp.swp  Bspline.cpp  CMakeLists.txt  README.md  convex.cpp  gp3.cpp  main.cpp
